<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg3">

    <RelativeLayout
        android:id="@+id/RLTop"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:gravity="center">

        <Button
            android:id="@+id/btnBack"
            android:layout_width="70dp"
            android:layout_height="32dp"
            android:layout_marginStart="20dp"
            android:fontFamily="sans-serif"
            android:textColor="#fff"
            android:textAllCaps="false"
            android:text="@string/back"
            android:background="@drawable/background_button_category" />

        <Button
            android:id="@+id/btnSkip"
            android:layout_width="70dp"
            android:layout_height="32dp"
            android:layout_marginEnd="20dp"
            android:layout_alignParentEnd="true"
            android:fontFamily="sans-serif"
            android:textColor="#fff"
            android:textAllCaps="false"
            android:text="@string/skip"
            android:background="@drawable/background_button_category" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/LLWhatIsYourGoal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/TVTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginEnd="60dp"
            android:textAlignment="center"
            android:fontFamily="sans-serif"
            android:textStyle="bold"
            android:textColor="#fff"
            android:text="@string/goal_screen_2_title"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/TVTitleDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:layout_marginTop="10dp"
            android:textColor="#fff"
            android:text="@string/goal_screen_2_description"
            android:textAlignment="center"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/TVTitleDescription2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:layout_marginTop="10dp"
            android:textColor="#fff"
            android:text="@string/goal_screen_2_description_2"
            android:textAlignment="center"
            android:textSize="12sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="230dp"
        android:layout_marginTop="35dp"
        android:layout_below="@+id/LLWhatIsYourGoal"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnFreeWeight"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:fontFamily="sans-serif-medium"
            android:textColor="#363636"
            android:textAllCaps="false"
            android:text="@string/free_weight"
            android:textSize="16sp"
            android:background="@drawable/background_button_register" />

        <Button
            android:id="@+id/btnBodyWeight"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp"
            android:fontFamily="sans-serif-medium"
            android:textColor="#363636"
            android:textAllCaps="false"
            android:text="@string/body_weight"
            android:textSize="16sp"
            android:background="@drawable/background_button_register" />

    </LinearLayout>

</LinearLayout>