<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg3">

    <RelativeLayout
        android:id="@+id/RLTop"
        android:layout_width="match_parent"
        android:layout_height="100dp">

        <Button
            android:id="@+id/btnSkip"
            android:layout_width="70dp"
            android:layout_height="32dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="40dp"
            android:layout_alignParentEnd="true"
            android:fontFamily="sans-serif"
            android:textColor="#fff"
            android:textAllCaps="false"
            android:text="@string/skip"
            android:background="@drawable/background_button_category" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/LLWhatIsYourGoal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/TVWhatIsYourGoal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginEnd="60dp"
            android:textAlignment="center"
            android:fontFamily="sans-serif"
            android:textStyle="bold"
            android:textColor="#fff"
            android:text="@string/what_is_your_goal"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/TVWhatIsYourGoalDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:layout_marginTop="10dp"
            android:textColor="#fff"
            android:text="@string/what_is_your_goal_description_1"
            android:textAlignment="center"
            android:textSize="13sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="230dp"
        android:gravity="center_horizontal"
        android:layout_marginTop="65dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnEsthetic"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:fontFamily="sans-serif-medium"
            android:textColor="#363636"
            android:textAllCaps="false"
            android:text="@string/selection_1"
            android:textSize="16sp"
            android:background="@drawable/background_button_register" />

        <Button
            android:id="@+id/btnPerformance"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp"
            android:fontFamily="sans-serif-medium"
            android:textColor="#363636"
            android:textAllCaps="false"
            android:textSize="16sp"
            android:text="@string/selection_2"
            android:background="@drawable/background_button_register" />

        <Button
            android:id="@+id/btnHypertrophy"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp"
            android:fontFamily="sans-serif-medium"
            android:textColor="#363636"
            android:textAllCaps="false"
            android:textSize="16sp"
            android:text="@string/selection_3"
            android:background="@drawable/background_button_register" />


    </LinearLayout>

</LinearLayout>