<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg1">

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_gradient" />

    <TextView
        android:id="@+id/TVLetsStart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lets_start"
        android:textSize="30sp"
        android:textAlignment="center"
        android:layout_centerInParent="true"
        android:textStyle="bold"
        android:textColor="#FFF"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lets_start_description"
        android:textSize="16sp"
        android:textAlignment="center"
        android:layout_centerInParent="true"
        android:layout_margin="15dp"
        android:textColor="#FFF"
        android:layout_below="@+id/TVLetsStart"/>

    <LinearLayout
        android:id="@+id/LLLoginRegister"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:layout_alignParentBottom="true"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:layout_marginBottom="10dp"
        android:weightSum="2">

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:text="@string/sign_in"
            android:textAllCaps="false"
            android:textSize="16sp"
            android:fontFamily="sans-serif-medium"
            android:background="@drawable/background_button_register"/>

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:text="@string/register"
            android:textAllCaps="false"
            android:fontFamily="sans-serif-medium"
            android:textSize="16sp"
            android:textColor="#fff"
            android:background="@drawable/background_button_login"/>

    </LinearLayout>


</RelativeLayout>